✨ verification endpoints
