# src/about-me/person/types.ts
@@ -28,6 +28,8 @@ export interface PersonInput {
 export interface PersonRepository {
 	getPerson: (id: string, knownFromElseWhere?: () => Person) => Promise<Person>
 	updatePerson: (id: any, update: PersonInput, knownFromElseWhere?: () => Partial<Person>) => Promise<Person>
+	verifyEmail: (verificationCode: string) => Promise<Person|null>
+	verifyPhone: (verificationCode: string) => Promise<Person|null>
 	checkHealth: () => Promise<boolean>
 }
 
